# ms

./: BUILD_PLAN.md  CHANGES.md  CHANGES_GUIDE.md  README.md  docker-compose.yml  master_plan.md  run.sh
core-engine/: CMakeLists.txt  Dockerfile
core-engine/src/: api_client.cpp  api_client.hpp  arbitrage_detector.cpp  arbitrage_detector.hpp  config.hpp  connection_manager.cpp  connection_manager.hpp  logger.hpp  main.cpp  price_tracker.cpp  price_tracker.hpp  types.hpp  websocket_client.cpp  websocket_client.hpp
core-engine/src/exchanges/: binance.cpp  binance.hpp  coinbase.cpp  coinbase.hpp  kraken.cpp  kraken.hpp
core-engine/tests/: test_detector.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: OpportunityTable.tsx  SpreadChart.tsx  Stats.tsx  SystemStatus.tsx  TradeDetailModal.tsx
frontend/src/pages/: AdvancedMode.tsx  Dashboard.tsx
middleware/: Dockerfile  manage.py  requirements.txt
middleware/api/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
middleware/api/management/commands/: seed_data.py
middleware/api/migrations/: 0001_initial.py
middleware/api/services/: simulation.py
middleware/api/services/models/: .gitkeep
middleware/marketscout/: settings.py  wsgi.py
